--- a/src/components/Weatherboard/Weatherboard.scss
+++ b/src/components/Weatherboard/Weatherboard.scss
@@ -13,8 +13,8 @@
   height: calc(40vw - 2.5em);
   max-height: 100%;
   min-width: 100%;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-  url('../src/assets/44.jpg');
+  // background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  // url('../src/assets/44.jpg');
   backdrop-filter: blur(5px);
   opacity: 0.8;
   background-size: cover;
